add update locastion
