# src/module/parents/types/today_trip.type.ts
@@ -2,7 +2,8 @@ import "reflect-metadata";
 import { ApiRequestStatus } from "@lib/httpMethod";
 import { Request } from "express";
 import { ObjectType } from "@lib/validate";
-import { IsEnum, IsString } from "@lib/type_declaration";
+import { IsArray, IsEnum, IsObject, IsString } from "@lib/type_declaration";
+import { number } from "zod/v4";
 
 
 export class today_tripReqBody {}
@@ -10,6 +11,30 @@ export class today_tripReqQuery {}
 export class today_tripReqParams {
     @IsString()
     studentId: string;
+}
+
+
+export class Route_Info extends ObjectType {
+    @IsString()
+    routeId: string;
+
+    @IsString()
+    routeName: string;
+
+    @IsArray(Object)
+    path: [number, number][];
+}
+
+
+export class StopPoint extends ObjectType {
+    @IsString()
+    stopId: string;
+
+    @IsString()
+    stopName: string;
+
+    @IsArray(Object)
+    pos: number[];
 }
 
 export @ApiRequestStatus({
@@ -24,6 +49,16 @@ export @ApiRequestStatus({
     })
     status: string;
 
+    @IsEnum({
+        value: ['DISPATCH', 'RETURN'],
+    })
+    type: string;
+
+    @IsObject(Route_Info)
+    route: Route_Info;
+
+    @IsObject(StopPoint)
+    stopPoint: StopPoint;
 }
 
 export const schema = {
